# aflux

./: .gitignore  README.md  prek.toml  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
src/aflux/cli/: main.py  parameters.py  video.py
src/aflux/cli/bucket/: main.py  s3.py
src/aflux/cli/ros/: bag.py  main.py
src/aflux/cli/video/: __init__.py  info.py  main.py
src/aflux/protocols/: __init__.py  _bucket_protocols.py  bucket.py
src/aflux/types/: __init__.py  _video_types.py  bucket.py  ros.py  video.py
src/aflux/utils/: __init__.py  _batch_utils.py  _bucket_utils.py  _key_utils.py  _stats_utils.py  _video_utils.py  ros.py
src/aflux/utils/_video_utils/: __init__.py  _video_helper.py  _video_reader.py
src/aflux/utils/bucket/: __init__.py  _dir_bucket.py  _file_allocator.py  _s3_bucket.py
src/aflux/utils/dataframe/: __init__.py  _dataframe_helper.py  _json_schema.py
src/aflux/utils/polars/: __init__.py  _polars_helper.py
src/aflux/utils/ros/: __init__.py  _bag_reader.py  _message_helper.py  _message_node.py  _message_polars.py
src/aflux/utils/video/: __init__.py  _video_helper.py  _video_reader.py
tests/: smoke_test.py  test_batch_utils.py  test_key_utils.py  test_stats_utils.py
tests/bucket/: test_dir_bucket.py  test_file_allocator.py  test_s3_bucket.py
tests/dataframe/: test_dataframe_helper.py  test_json_schema.py
tests/ros/: test_bag_reader.py  test_message_helper.py  test_message_node.py  test_message_polars.py
tests/video/: test_video_reader.py
