[project]
name = "aflux"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "av>=16.1.0",
    "numpy>=2.4.2",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipywidgets>=8.1.8",
    "notebook>=7.5.3",
    "pillow>=12.1.1",
    "tqdm>=4.67.3",
]

[tool.ruff]
target-version = "py312"
line-length = 120
extend-include = ["*.ipynb"]

[tool.ruff.lint]
extend-select = ["I", "RUF022"]

[tool.ruff.format]
docstring-code-format = true
