[project]
name = "aflux"
version = "0.1.5"
description = "aflux"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "DayNice", email = "76981513+DayNice@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "av>=16.1.0",
    "boto3>=1.42.68",
    "cyclopts>=4.10.0",
    "numpy>=2.4.2",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
    "rosbags>=0.11.0",
]

[project.scripts]
aflux = "aflux.cli.main:app"

[project.urls]
Repository = "https://github.com/DayNice/aflux"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "pillow>=12.1.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "tqdm>=4.67.3",
    "types-boto3[s3]>=1.42.68",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.ruff]
target-version = "py312"
line-length = 120
extend-include = ["*.ipynb"]

[tool.ruff.lint]
extend-select = ["I", "RUF022"]

[tool.ruff.format]
docstring-code-format = true
