[project]
name = "aflux"
version = "0.2.0"
description = "aflux"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "DayNice", email = "76981513+DayNice@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "av>=16.1.0",
    "boto3>=1.42.68",
    "cyclopts>=4.10.0",
    "numpy>=2.4.2",
    "pillow>=12.1.1",
    "polars>=1.39.3",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
    "rosbags>=0.11.0",
]

[project.scripts]
aflux = "aflux.cli.main:app"

[project.urls]
Repository = "https://github.com/DayNice/aflux"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    {"include-group" = "notebook"},
    {"include-group" = "test"},
    {"include-group" = "type"},
]
notebook = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "tqdm>=4.67.3",
]
test = [
    "anyio>=4.13.0",
    "moto[s3]>=5.1.22",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]
type = [
    "types-boto3[s3]>=1.42.68",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.ruff]
target-version = "py312"
line-length = 120
extend-include = ["*.ipynb"]

[tool.ruff.lint]
extend-select = ["I", "RUF022"]

[tool.ruff.format]
docstring-code-format = true

[tool.coverage.run]
source_pkgs = ["aflux"]
branch = true
parallel = true

[tool.coverage.paths]
aflux = ["src/aflux", "*/aflux/src/aflux"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "^\\s*@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "def __repr__",
    "def __str__",
]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing --cov-report=xml"
